--- a/data/webstack.yml
+++ b/data/webstack.yml
@@ -101,7 +101,7 @@
       url: https://zenvideo.qq.com/
       description: 微信生态视频创作中枢，智能剪辑与特效模板
     - title: D-Id
-      logo: d-id
+      logo: d-id.png
       url: https://www.d-id.com/
       description: 生成式人工智能视频编辑，支持多模态视频生成
     
