--- a/data/webstack.yml
+++ b/data/webstack.yml
@@ -159,119 +159,129 @@
       url: https://miaobi.xinhuaskl.com/
       description: 政务公文智能起草，合规性自动校验
 
-
-# - taxonomy: AI办公
-#   icon: fas fa-briefcase fa-lg
-#   list: 
-#     - term: AI文档
-#       links:
-#         - title: 微信读书
-#           url: https://weread.qq.com/
-#           logo: 微信读书.jpg
-#           description: 微信读书电脑版。
-#         - title: 书栈网
-#           url: https://www.bookstack.cn/
-#           logo: 书栈网.jpg
-#           description: IT 互联网开源编程书籍免费阅读与下载。
-#     - term: AI表格
-#       links:
-#         - title: Inoreader
-#           url: https://www.inoreader.com/
-#           logo: inoreader.jpg
-#           description: 重新掌控你的新闻订阅源。
-#         - title: Hacker News
-#           url: https://news.ycombinator.com/
-#           logo: hacker-news.jpg
-#           description: 一家关于计算机黑客和创业公司的社会化新闻网站。
-#         - title: 经管之家
-#           url: https://bbs.pinggu.org/
-#           logo: 经管之家.jpg
-#           description: 国内活跃的经济、管理、金融、统计在线教育和咨询网站。
-#         - title: 阮一峰的网络日志
-#           url: http://www.ruanyifeng.com/blog/
-#           logo: 阮一峰.png
-#           description: 阮一峰，科技爱好者周刊。
-#         - title: 酷壳
-#           url: https://www.coolshell.cn/
-#           logo: ''
-#           description: 酷 壳 – CoolShell。
-#     - term: AI思维导图
-#       links:
-#         - title: Design Guidelines
-#           url: http://designguidelines.co/
-#           logo: designguidelines.png
-#           description: Design Guidelines &mdash; The way products are built.
-#         - title: Awesome design systems
-#           url: https://github.com/alexpate/awesome-design-systems
-#           logo: awesome_design_systems.png
-#           description:  A collection of awesome design systems.
-#         - title: Material Design
-#           url: https://material.io/guidelines/
-#           logo: Material_Design.png
-#           description: Introduction - Material Design.
-#         - title: Human Interface Guidelines
-#           url: https://developer.apple.com/ios/human-interface-guidelines
-#           logo: human_interface_guidelines.png
-#           description: Human Interface Guidelines iOS.
-#         - title: Photoshop Etiquette
-#           url: http://viggoz.com/photoshopetiquette/
-#           logo: photoshopetiquette.png
-#           description: PS礼仪-WEB设计指南。
-#     - term: AI PPT
-#       links:
-#         - title: Photoshop Lady
-#           url: http://www.photoshoplady.com/
-#           logo: PhotoshopLady.png
-#           description: Your Favourite Photoshop Tutorials in One Place.
-#         - title: doyoudo
-#           url: http://doyoudo.com/
-#           logo: doyoudo.png
-#           description: 创意设计软件学习平台。
-#         - title: 没位道
-#           url: http://www.c945.com/web-ui-tutorial/
-#           logo: web_ui_tutorial.png
-#           description: WEB UI免费视频公开课。
-#         - title: 慕课网
-#           url: https://www.imooc.com/
-#           logo: imooc.png
-#           description: 程序员的梦工厂（有UI课程）。
-#     - term: AI会议
-#       links:
-#         - title: Photoshop Lady
-#           url: http://www.photoshoplady.com/
-#           logo: PhotoshopLady.png
-#           description: Your Favourite Photoshop Tutorials in One Place.
-#         - title: doyoudo
-#           url: http://doyoudo.com/
-#           logo: doyoudo.png
-#           description: 创意设计软件学习平台。
-#         - title: 没位道
-#           url: http://www.c945.com/web-ui-tutorial/
-#           logo: web_ui_tutorial.png
-#           description: WEB UI免费视频公开课。
-#         - title: 慕课网
-#           url: https://www.imooc.com/
-#           logo: imooc.png
-#           description: 程序员的梦工厂（有UI课程）。
-#     - term: AI招聘
-#       links:
-#         - title: Photoshop Lady
-#           url: http://www.photoshoplady.com/
-#           logo: PhotoshopLady.png
-#           description: Your Favourite Photoshop Tutorials in One Place.
-#         - title: doyoudo
-#           url: http://doyoudo.com/
-#           logo: doyoudo.png
-#           description: 创意设计软件学习平台。
-#         - title: 没位道
-#           url: http://www.c945.com/web-ui-tutorial/
-#           logo: web_ui_tutorial.png
-#           description: WEB UI免费视频公开课。
-#         - title: 慕课网
-#           url: https://www.imooc.com/
-#           logo: imooc.png
-#           description: 程序员的梦工厂（有UI课程）。
-
+    
+- taxonomy: AI办公
+  icon: fas fa-briefcase fa-lg
+  list: 
+    - term: AI文档
+      links:
+        - title: 通义智文
+          url: https://tongyi.aliyun.com/zhiwen
+          logo: tongyi.png
+          description: 阿里云智能文档分析平台，支持多模态内容理解
+        - title: 包阅AI
+          url: https://baoyueai.com/
+          logo: baoyueai.png
+          description: 文档智能解析与知识库构建工具
+        - title: 万知
+          url: https://www.wanzhi.com/
+          logo: wanzhi01.png
+          description: 企业级知识库管理系统，支持智能检索
+        - title: 百度文库AI
+          url: https://wenku.baidu.com/ndlaunch/browse/chat
+          logo: baidu-wenku-ai.png
+          description: 文心大模型驱动的文库内容智能生成
+        - title: WPS AI
+          url: https://ai.wps.cn/
+          logo: wps-ai-white.png
+          description: 办公场景AI助手，智能排版与写作辅助
+        - title: Humata
+          url: https://www.humata.ai/
+          logo: humata-ai.png
+          description: PDF文档智能问答与知识提取工具
+    - term: AI表格
+      links:
+        - title: 酷表ChatExcel
+          url: https://www.chatexcel.com/
+          logo: chatexcel.png
+          description: 自然语言交互式表格处理工具
+        - title: 办公小浣熊
+          url: https://www.xiaohuanxiong.com/
+          logo: sensetime-raccoon-code.png
+          description: 商汤科技智能表格数据分析平台
+        - title: vika维格云
+          url: https://vika.cn/
+          logo: vika-data.png
+          description: 多维智能表格，支持跨平台数据联动
+        - title: Ajelix
+          url: https://ajelix.com/
+          logo: ajelix.png
+          description: Excel公式自动生成与错误诊断工具
+        - title: Sheet+
+          url: https://llcbuddy.com/
+          logo: sheetplus.png
+          description: AI表格模板库与自动化工具
+    - term: AI思维导图
+      links:
+        - title: TreeMind树图
+          url: https://shutu.cn/
+          logo: treemind-shutu.png
+          description: 智能导图生成与结构化表达工具
+        - title: Mapify
+          url: https://mapify.so/cn/
+          logo: mapify.png
+          description: 可视化知识图谱构建平台
+        - title: Amymind
+          url: https://amymind.com/
+          logo: amymind.png
+          description: AI辅助思维导图实时协作工具
+        - title: Taskade
+          url: https://www.taskade.com/
+          logo: taskade.png
+          description: 任务管理与思维导图融合平台
+    - term: AI PPT
+      links:
+        - title: AIPPT
+          url: https://www.aippt.cn/
+          logo: aippt-cn.png
+          description: 智能PPT生成工具，模板库丰富
+        - title: 咔片PPT
+          url: https://www.cappt.cc/
+          logo: cappt.png
+          description: 一键式PPT智能设计平台
+        - title: 讯飞智文
+          url: https://zhiwen.xfyun.cn/
+          logo: xunfei-zhiwen.png
+          description: 语音驱动PPT智能创作工具
+        - title: Napkin
+          url: https://www.napkin.ai/
+          logo: Napkin.png
+          description: 草图转专业PPT设计工具
+        - title: GAIPPT
+          url: https://www.gaippt.com/
+          logo: GaiPPT.png
+          description: 生成式AI全流程PPT制作平台
+    - term: AI会议
+      links:
+        - title: 听脑AI	
+          url: https://itingnao.com/
+          logo: itingnao-ai.png
+          description: 会议语音实时转写与摘要生成
+        - title: 通义听悟
+          url: https://tingwu.aliyun.com/
+          logo: tingwu.png
+          description: 阿里云智能会议纪要生成工具
+        - title: 讯飞会议
+          url: https://meeting.iflyrec.com/
+          logo: meeting-iflyrec.png
+          description: 讯飞智能会议实时转写系统
+        - title: 飞书妙记
+          url: https://www.feishu.cn/product/minutes
+          logo: feishu-minutes.png
+          description: 飞书智能会议记录与待办管理
+        - title: Otter.ai
+          url: https://otter.ai/
+          logo: otter-ai.png
+          description: 多语言会议记录与知识库管理
+        - title: 腾讯会议AI助手
+          url: https://meeting.tencent.com/ai
+          logo: tencent-meeting-ai.png
+          description: 会议智能翻译与内容整理
+        - title: Fireflies.ai
+          url: https://fireflies.ai/
+          logo: fireflies-ai.png
+          description: 自动化会议记录与分析工具
+    
 
 
 - taxonomy: AI编程
